--- a/css/template.css
+++ b/css/template.css
@@ -29,7 +29,7 @@
 		header.heading1 {
 			background-color:#00728a;
 			padding-top: 2%;
-			padding-bottom: 2%;
+			padding-bottom: 6%;
 		}
 		h1 {
 			color:orange;
@@ -41,4 +41,13 @@
 			padding-bottom: 1%;
 			margin-left: 0.1%; 
 			margin-right: 0.1%;
+		}
+		span.navrow {
+			padding-right: 5%;
+		}
+		span.bottomnav {
+			color: white;
+		}
+		a.navlink {
+			color: white;
 		}
