--- a/css/template.css
+++ b/css/template.css
@@ -15,6 +15,8 @@
 			color: orange;
 			padding-bottom: 6%;
 			padding-top: 6%;
+			border-bottom-left-radius: 5px;
+			border-bottom-right-radius: 5px;
 		}
 		body {
 			background-color:#3d8fa0;
@@ -30,10 +32,18 @@
 			background-color:#00728a;
 			padding-top: 2%;
 			padding-bottom: 6%;
+			border-top-left-radius: 5px;
+			border-top-right-radius: 5px;
+		}
+		header.subjectheading {
+			padding-top: 5%;
 		}
 		h1 {
 			color:orange;
 			
+		}
+		img {
+			border-radius: 5px;
 		}
 		#footer.row {
 			background-color:#00728a;
@@ -41,6 +51,7 @@
 			padding-bottom: 1%;
 			margin-left: 0.1%; 
 			margin-right: 0.1%;
+			border-radius: 5px;
 		}
 		span.navrow {
 			padding-right: 5%;
@@ -50,4 +61,14 @@
 		}
 		a.navlink {
 			color: white;
+		}
+		section.ref {
+			padding-top: 1%;
+			padding-bottom: 5%;
+			font-size: 8px;
+			font-style: italic;
+		}
+		section.maintext{
+			padding-top: 1%;
+			
 		}
