--- a/css/template.css
+++ b/css/template.css
@@ -1,8 +1,11 @@
 @charset "utf-8";
 /* CSS Document */
-
+		iframe {
+			border-radius: 5px;
+		}
 		h2 {
 			color: #00728a;
+			text-shadow: 1px 1px black;
 		}
 		header.mainimage{
 			background-color: #00728a;
@@ -40,7 +43,7 @@
 		}
 		h1 {
 			color:orange;
-			
+			text-shadow: 1px 1px black;
 		}
 		img {
 			border-radius: 5px;
@@ -56,12 +59,30 @@
 		span.navrow {
 			padding-right: 5%;
 		}
-		span.bottomnav {
-			color: white;
+		
+
+		a.bottomnav {
+			color:white;
 		}
+
 		a.navlink {
 			color: white;
+			transition: 0.4s;
+			
 		}
+		a.navlink:hover {
+			background-color:#348fa2;
+			padding-bottom: 2%;
+			padding-top: 2%;
+			padding-left: 1%;
+			padding-right: 1%;
+			text-decoration: underline;
+			color: orange;
+			border-radius: 5px;
+		}
+
+
+
 		section.ref {
 			padding-top: 1%;
 			padding-bottom: 5%;
