--- a/css/template.css
+++ b/css/template.css
@@ -93,3 +93,74 @@
 			padding-top: 1%;
 			
 		}
+		img.lightbulb {
+				width: 650px;
+				height: 206px;
+			}
+		div.container {
+				width: 750px;
+			}
+		.col-lg-4 {
+				position: relative;
+  				min-height: 1px;
+  				padding-right: 15px;
+  				padding-left: 15px;
+				width: 33.33333333%;
+				float: left;
+				
+			}
+		@media only screen and (max-width: 850px) {
+			img.lightbulb {
+				width: 400px;
+				height: 127px;
+			}
+			div.container {
+				width: 500px;
+			}
+			nav {
+				background-color: #00728a;
+				text-align: center;
+				font-size: x-small;
+				font-weight: bold;
+				color: orange;
+				padding-bottom: 2%;
+				padding-top: 2%;
+				border-bottom-left-radius: 5px;
+				border-bottom-right-radius: 5px;
+			}
+			header.heading1 {
+				background-color: #00728a;
+				padding-top: 1%;
+				padding-bottom: 2%;
+				border-top-left-radius: 5px;
+				border-top-right-radius: 5px;
+			}
+			h1 {
+				font-size: small; 
+			}
+			h2 {
+				font-size: smaller;
+			}
+			section {
+				font-size: x-small;
+			}
+			figure {
+				float: none;
+				text-align: center;
+				padding-bottom: 1%;
+				
+			}
+			img {
+				width: 50%;
+				height: 50%;
+				text-align: center;
+				padding-bottom: 2%;
+			}
+			#youtube {
+				width: 465px;
+				height: 215px;
+			}
+			.col-lg-4 {
+				font-size: x-small;
+			}
+			
