--- a/css/template.css
+++ b/css/template.css
@@ -5,7 +5,7 @@
 		}
 		h2 {
 			color: #00728a;
-			
+			text-shadow: 1px 1px black;
 		}
 		header.mainimage{
 			background-color: #00728a;
@@ -58,6 +58,7 @@
 		}
 		span.navrow {
 			padding-right: 5%;
+			font-size: small;
 		}
 		
 
@@ -109,6 +110,7 @@
 				float: left;
 				
 			}
+
 		@media only screen and (max-width: 850px) {
 			img.lightbulb {
 				width: 400px;
@@ -125,8 +127,12 @@
 				color: orange;
 				padding-bottom: 2%;
 				padding-top: 2%;
+				padding-right: 0%;
 				border-bottom-left-radius: 5px;
 				border-bottom-right-radius: 5px;
+			}
+			span.navrow {
+				font-size: 10px;
 			}
 			header.heading1 {
 				background-color: #00728a;
@@ -140,6 +146,7 @@
 			}
 			h2 {
 				font-size: smaller;
+				text-shadow: 0px 0px black;
 			}
 			section {
 				font-size: x-small;
@@ -163,4 +170,6 @@
 			.col-lg-4 {
 				font-size: x-small;
 			}
+	}
+
 			
